--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,13 +1,13 @@
 server 
 {
 	listen 443 ssl;
-	server_name htalhaou.42.fr
+	server_name htalhaou.42.fr;
 	root /var/www/;
 	index  index.html index.php;
 	ssl_certificate /etc/nginx/ssl/htalhaou.42.fr.crt;
 	ssl_certificate_key /etc/nginx/ssl/htalhaou.42.fr.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
-	location/{
+	location / {
 		try_files $uri $uri/ =404;
 	}
 }
