--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,1 +1,27 @@
 FROM debian:bookworm
+
+RUN apt update && apt install -y mariadb-server
+
+RUN mkdir /var/run/mysqld; \
+chmod 777 /var/run/mysqld; \
+{ echo '[mysqld]'; \
+echo 'skip-host-cache'; \
+echo 'skip-name-resolve'; \
+echo 'bind-address=0.0.0.0'; \
+} | tee /etc/mysql/mariadb.conf.d/50-server.cnf; \
+sed -i "s|skip-networking|skip-networking=0|g" \
+/etc/mysql/mariadb.conf.d/50-server.cnf
+
+RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
+
+EXPOSE 3306
+
+USER mysql
+
+COPY ./conf/50-server.cnf   /etc/mysql/mariadb.conf.d/50-server.cnf
+
+RUN sh db.sh && rm db.sh
+
+ENTRYPOINT ["sh", "db.sh"]
+
+CMD ["/usr/bin/mysqld", "--skip-log-error"]
