--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,11 +3,22 @@ FROM debian:bookworm
 RUN apt-get install -y php7.3 \
 	php7.3-fpm \
 	php7.3-mysql \
-	mariadb-client
+	mariadb-client \
+	nginx curl
 
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+	chmod +x wp-cli.phar && \
+	mv wp-cli.phar /usr/local/bin/wp
 
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
+COPY ./tools/script.sh /script.sh
 
-RUN	chown -R root:root /var/www/wordpress
+COPY ./conf/default.conf  /etc/php/7.3/fpm/pool.d/
+
+RUN chmod +x /script.sh
+
+RUN mkdir -p /run/php
+
+ENTRYPOINT ["sh", "script.sh"]
+
+CMD ["php-fpm7.3", "-R", "-F"]
 
