--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,24 +1,30 @@
 FROM debian:bookworm
 
-RUN apt-get install -y php7.3 \
-	php7.3-fpm \
-	php7.3-mysql \
-	mariadb-client \
-	nginx curl
+# Install required packages
+RUN apt update && apt upgrade -y && apt install -y php8.2 \
+    php8.2-fpm \
+    php8.2-mysql \
+    mariadb-server \
+    nginx
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
-	chmod +x wp-cli.phar && \
-	mv wp-cli.phar /usr/local/bin/wp
+RUN apt update && apt upgrade -y && apt install -y curl
 
+# Create the directory with correct ownership and permissions
+RUN mkdir -p /var/www/html/wordpress \
+    && chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html
+
+# Install WP CLI
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
+
+# Copy the script
 COPY ./tools/script.sh /script.sh
 
-COPY ./conf/default.conf  /etc/php/7.3/fpm/pool.d/
-
-RUN chmod +x /script.sh
-
+# Create a directory for PHP-FPM to store the socket file
 RUN mkdir -p /run/php
 
-ENTRYPOINT ["sh", "script.sh"]
+# Set the entry point
+ENTRYPOINT ["sh", "/script.sh"]
 
-CMD ["php-fpm7.3", "-R", "-F"]
-
+# Start PHP-FPM
+CMD ["/usr/sbin/php-fpm8.2", "-R", "-F"]
