--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM debian:bookworm
 
-RUN apt update && apt upgrade && apt install -y nginx openssl
+RUN apt update && apt upgrade -y && apt install nginx -y
+
+RUN apt install -y openssl
 
 RUN mkdir /etc/nginx/ssl && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
