--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,7 +2,7 @@ server
 {
 	listen 443 ssl;
 	server_name htalhaou.42.fr;
-	root /var/www/html;
+	root /var/www/html/wordpress;
 	index index.html;
 	ssl_certificate /etc/nginx/ssl/htalhaou.42.fr.crt;
 	ssl_certificate_key /etc/nginx/ssl/htalhaou.42.fr.key;
@@ -10,5 +10,9 @@ server
 	location / 
 	{
 		try_files $uri $uri/ =404;
+	}
+	location ~ \.php$ {
+	include snippets/fastcgi-php.conf;
+	fastcgi_pass wordpress:9000;
 	}
 }
