--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,14 @@
 MYSQL_ROOT_PASSWORD=root_password
-MYSQL_DATABASE=wordpress
+WP_DATABASE=wordpress
 MYSQL_USER=wordpress_user
 MYSQL_PASSWORD=wordpress_password
-WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_PASSWORD=wordpress_password
-WORDPRESS_DB_USER=wordpress_user
-WORDPRESS_TABLE_PREFIX=wp_
+WP_DB_NAME=wordpress
+WP_DB_PASSWORD=wordpress_password
+WP_DB_USER=wordpress_user
+WP_HOST=wordpress
+WP_URL=http://localhost:8000
+WP_TITLE=My WordPress Blog
+WP_ADMIN=admin
+WP_ADMIN_PASSWD=admin_password
+WP_ADMIN_EMAIL=htlhaouia@gmail.com
+
