--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bookworm
 
 RUN apt-get update -y \
     && apt-get upgrade -y \
-    && apt-get install -y mariadb-server 
+    && apt-get install -y mariadb-server && apt-get install -y mysql-client && apt-get install -y mariadb-client
 
 RUN mkdir -p /run/mysqld && chown mysql:mysql /run/mysqld && chmod 755 /run/mysqld
 
@@ -12,7 +12,7 @@ COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
 EXPOSE 3306
 
-ENTRYPOINT ["sh", "/script.sh"]
+ENTRYPOINT ["sh", "script.sh"]
 
 CMD ["mariadbd"]
 
