--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,44 +4,30 @@ services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - WP_DATABASE=${WP_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    volumes:
-      - ./volumes/mariadb:/var/lib/mysql
+    env_file:
+      - ./.env
+    # volumes:
+    #   - ./volumes/mariadb:/var/lib/mysql
     networks:
       - wordpress
     ports:
       - 3306:3306
-    restart: always
+    restart: on-failure
 
-  # wordpress:
-  #   container_name: wordpress
-  #   build: ./requirements/wordpress
-  #   volumes:
-  #     - ./volumes/wordpress:/var/www/html/wordpress
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - wordpress
-  #   depends_on:
-  #     - mariadb
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-  #     - MYSQL_DATABASE=${MYSQL_DATABASE}
-  #     - MYSQL_USER=${MYSQL_USER}
-  #     - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-  #     - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
-  #     - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
-  #     - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
-  #     - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
-  #     - WORDPRESS_TABLE_PREFIX=${WORDPRESS_TABLE_PREFIX}
-  #   ports:
-  #     - 9000:9000
-  #   restart: always
-  #   init: true
+  wordpress:
+    container_name: wordpress
+    build: ./requirements/wordpress
+    # volumes:
+    #   - ./volumes/wordpress:/var/www/html/wordpress
+    env_file:
+      - ./.env
+    networks:
+      - wordpress
+    depends_on:
+      - mariadb
+    ports:
+      - 9000:9000
+    restart: on-failure
 
   # # nginx:
   # #   container_name: nginx
@@ -63,16 +49,16 @@ networks:
   wordpress:
     driver: bridge
 
-volumes:
-  wordpress:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/wordpress
-  mariadb:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/mariadb
+# volumes:
+#   wordpress:
+#     driver: local
+#     driver_opts:
+#       type: none
+#       o: bind
+#       device: ${PWD}/wordpress
+#   mariadb:
+#     driver: local
+#     driver_opts:
+#       type: none
+#       o: bind
+#       device: ${PWD}/mariadb
