--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -12,7 +12,7 @@ COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
 EXPOSE 3306
 
-ENTRYPOINT ["sh", "script.sh"]
+ENTRYPOINT ["sh", "/script.sh"]
 
 CMD ["mariadbd"]
 
