--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,6 +4,7 @@ RUN apt update && apt upgrade -y && apt install -y php8.2 \
     php8.2-fpm \
     php8.2-mysql \
     mariadb-client \
+    mariadb-server \
     nginx curl
 
 RUN ln -sf /usr/bin/php8.2 /usr/bin/php
@@ -13,19 +14,16 @@ RUN mkdir -p /var/www/html/wordpress \
     && chown -R www-data:www-data /var/www/html \
     && chmod -R 755 /var/www/html
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
+# RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
 
-# Create a directory for PHP-FPM to store the socket file
 RUN mkdir -p /run/php
 
-# Copy script.sh into the Docker image
 COPY ./tools/script.sh /script.sh
 
-# Make the script executable
 RUN chmod +x /script.sh
 
-# Set the entry point
-ENTRYPOINT ["sh", "script.sh"]
+RUN mv /script.sh /usr/bin/
 
-# Start PHP-FPM
-CMD ["/usr/sbin/php-fpm8.2", "-R", "-F"]
+CMD ["script.sh"]
+
+# CMD ["/usr/sbin/php-fpm8.2", "-R", "-F"]
