--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,13 @@
-MYSQL_ROOT_PASSWORD=root_password
-WP_DATABASE=wordpress
-MYSQL_USER=wordpress_user
-MYSQL_PASSWORD=wordpress_password
-WP_DB_NAME=wordpress
-WP_DB_PASSWORD=wordpress_password
-WP_DB_USER=wordpress_user
-WP_HOST=wordpress
+DATABASE_ROOT_PASSWORD=123456
+DATABASE_NAME=test
+DATABASE_USER=test
+DATABASE_USER_PASSWORD=123456
+WP_HOST=mariadb:3306
 WP_URL=http://localhost:8000
-WP_TITLE=My WordPress Blog
+WP_TITLE=Test
 WP_ADMIN=admin
-WP_ADMIN_PASSWD=admin_password
+WP_ADMIN_PASSWD=123456
 WP_ADMIN_EMAIL=htlhaouia@gmail.com
-
+WP_USER=test
+WP_EMAIL=test@gmail.com
+WP_PASSWORD=123456
