--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,17 +2,18 @@ FROM debian:bookworm
 
 RUN apt update && apt upgrade -y && apt install -y mariadb-server && apt install -y mariadb-client
 
-RUN mkdir /var/run/mysqld; \
-chmod 777 /var/run/mysqld; \
-chown -R mysql:mysql /var/run/mysqld;
+# RUN mkdir -p /var/lib/mysql; \
+#     chown -R mysql:mysql /var/lib/mysql
 
-RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
 
-COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+RUN mkdir -p /var/run/mysqld && chmod 777 /var/run/mysqld
+
+# COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 EXPOSE 3306
 
-USER mysql
 COPY ./tools/script.sh /script.sh
+
 ENTRYPOINT ["sh", "script.sh"]
-CMD ["mariadb"]
+
+CMD ["mariadbd", "--user=root", "--bind-address=0.0.0.0"]
