--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 DATABASE_ROOT_PASSWORD=123456
-DATABASE_NAME=testdb
+DATABASE_NAME=test
 DATABASE_USER=test
 DATABASE_USER_PASSWORD=123456
 WP_HOST=mariadb:3306
