--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
-DATABASE_ROOT_PASSWORD=123456
+DATABASE_ROOT_PASSWORD=''
 DATABASE_NAME=test
 DATABASE_USER=test
-DATABASE_USER_PASSWORD=123456
+DATABASE_USER_PASSWORD=''
 WP_HOST=mariadb:3306
 WP_URL=http://localhost:8000
 WP_TITLE=Test
