--- a/srcs/.env
+++ b/srcs/.env
@@ -3,11 +3,11 @@ DATABASE_NAME=test
 DATABASE_USER=test
 DATABASE_USER_PASSWORD=''
 WP_HOST=mariadb:3306
-WP_URL=http://localhost:8000
+WP_URL=htalhaou.42.fr
 WP_TITLE=Test
 WP_ADMIN=admin
 WP_ADMIN_PASSWD=123456
-WP_ADMIN_EMAIL=htlhaouia@gmail.com
+WP_ADMIN_EMAIL=htalhaou@gmail.com
 WP_USER=test
 WP_EMAIL=test@gmail.com
 WP_PASSWORD=123456
