--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,10 +5,8 @@ RUN apt update && apt upgrade -y && apt install -y php8.2 \
     php8.2-mysql \
     mariadb-client \
     mariadb-server \
-    nginx curl
-
-RUN ln -sf /usr/bin/php8.2 /usr/bin/php
-
+    curl \ 
+    sendmail
 
 RUN mkdir -p /var/www/html/wordpress \
     && chown -R www-data:www-data /var/www/html \
@@ -20,8 +18,6 @@ COPY ./tools/script.sh /script.sh
 
 RUN chmod +x /script.sh
 
-RUN mv /script.sh /usr/bin/
+ENTRYPOINT ["/script.sh"]
 
-CMD ["script.sh"]
-
-# CMD ["/usr/sbin/php-fpm8.2", "-R", "-F"]
+CMD ["/usr/sbin/php-fpm8.2", "-F"]
