--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,17 +2,13 @@ server
 {
 	listen 443 ssl;
 	server_name htalhaou.42.fr;
-	ssl_protocols TLSv1.2 TLSv1.3;
-
 	root /var/www/html/wordpress;
 	index index.html index.htm index.php;
-	
 	ssl_certificate /etc/nginx/ssl/htalhaou.42.fr.crt;
 	ssl_certificate_key /etc/nginx/ssl/htalhaou.42.fr.key;
-	
+	ssl_protocols TLSv1.2 TLSv1.3;
 	autoindex on;
-	location / 
-	{
+	location / {
 		try_files $uri $uri/ =404;
 	}
 	location ~ \.php$ {
