--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,15 @@
-DATABASE_ROOT_PASSWORD=''
+DATABASE_ROOT_PASSWORD='123456'
 DATABASE_NAME=test
 DATABASE_USER=test
-DATABASE_USER_PASSWORD=''
+DATABASE_USER_PASSWORD='123456'
 WP_HOST=mariadb:3306
 WP_URL=htalhaou.42.fr
 WP_TITLE=Test
-WP_ADMIN=admin
-WP_ADMIN_PASSWD=123456
+WP_ADMIN=hamza
+WP_ADMIN_PASSWD='123456'
 WP_ADMIN_EMAIL=htalhaou@gmail.com
 WP_USER=test
 WP_EMAIL=test@gmail.com
-WP_PASSWORD=123456
+WP_PASSWORD='123456'
+DATABASE_PREFIX=wp_test
+DATABASE_HOST=mariadb
