--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update && apt upgrade -y && apt install nginx -y
 
 RUN apt install -y openssl
 
-RUN mkdir /etc/nginx/ssl && \
+RUN mkdir -p /etc/nginx/ssl && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/nginx/ssl/htalhaou.42.fr.key \
     -out /etc/nginx/ssl/htalhaou.42.fr.crt  \
