--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,13 +7,12 @@ server
 	ssl_certificate /etc/nginx/ssl/htalhaou.42.fr.crt;
 	ssl_certificate_key /etc/nginx/ssl/htalhaou.42.fr.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
-	autoindex on;
 	location / {
 		try_files $uri $uri/ =404;
 	}
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		# fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_pass wordpress:9000;
 	}
 }
